zip code lookup

--- a/src/_styles/main.scss
+++ b/src/_styles/main.scss
@@ -1,5 +1,17 @@
+.app {
+  text-align: center;
+}
+
 .temp {
   font-size: 144px;
+  font-family: 'Georgia';
+}
+
+form {
+  margin: 50px;
+}
+
+input {
+  width: 250px;
   text-align: center;
-  font-family: 'Georgia'
 }
